--- a/sidx/platform/msvc2008/projects/sidx.vcproj
+++ b/sidx/platform/msvc2008/projects/sidx.vcproj
@@ -181,6 +181,18 @@
 				>
 			</File>
 		</Filter>
+		<Filter
+			Name="null"
+			>
+			<File
+				RelativePath="..\..\..\src\sidx\sidx_null.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\sidx\sidx_null.h"
+				>
+			</File>
+		</Filter>
 		<File
 			RelativePath="..\..\..\src\sidx\sidx_region.c"
 			>
