[ADDED] dev screen cache开关
Former-commit-id: 06e4f2b58f31c136bd10cf66ef7215353f63098f

--- a/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
+++ b/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
@@ -1833,6 +1833,10 @@
 					>
 				</File>
 				<File
+					RelativePath="..\..\..\src\drag2d\common\dev_config.h"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\src\drag2d\common\SettingData.cpp"
 					>
 				</File>
