[ADDED] insert spr aop
Former-commit-id: 5d0599221409c69b65b3970e4da2e9c333b19e43

--- a/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
+++ b/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
@@ -485,6 +485,14 @@
 					>
 				</File>
 				<File
+					RelativePath="..\..\..\src\drag2d\history\InsertSpriteAOP.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\drag2d\history\InsertSpriteAOP.h"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\src\drag2d\history\MirrorSpriteAOP.cpp"
 					>
 				</File>
@@ -2885,6 +2893,10 @@
 		<Filter
 			Name="message"
 			>
+			<File
+				RelativePath="..\..\..\src\drag2d\message\Observer.cpp"
+				>
+			</File>
 			<File
 				RelativePath="..\..\..\src\drag2d\message\Observer.h"
 				>
