[ADDED] RenderContextStack来统一gl context间的切换
Former-commit-id: 9b6cf11cb281ce24099acb28aa7110685c1d0998

--- a/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
+++ b/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
@@ -1098,6 +1098,14 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\..\src\drag2d\render\RenderContextStack.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\drag2d\render\RenderContextStack.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\src\drag2d\render\ScreenCache.cpp"
 				>
 			</File>
