[ADDED] 记下color data
Former-commit-id: 6c1436023ab646af349dd3342c1d2621c64d19ec

--- a/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
+++ b/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
@@ -2705,11 +2705,19 @@
 				Name="property"
 				>
 				<File
-					RelativePath="..\..\..\src\drag2d\widgets\ColorProperty.cpp"
+					RelativePath="..\..\..\src\drag2d\widgets\MyColorProperty.cpp"
 					>
 				</File>
 				<File
-					RelativePath="..\..\..\src\drag2d\widgets\ColorProperty.h"
+					RelativePath="..\..\..\src\drag2d\widgets\MyColorProperty.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\drag2d\widgets\SysColorProperty.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\drag2d\widgets\SysColorProperty.h"
 					>
 				</File>
 			</Filter>
