add rapidvg as submodule
Former-commit-id: 06069dc8df6e5746d17cf84e796748c9a4433029

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "gtxt/src/gtxt"]
 	path = gtxt/src/gtxt
 	url = ssh://tea.ejoy.com:3222/LR/gtxt.git
+[submodule "rapidvg/src/rapidvg"]
+	path = rapidvg/src/rapidvg
+	url = ssh://tea.ejoy.com:3222/LR/RapidVG.git
