[ADDED] rapid vg shader
Former-commit-id: 010a58cc670197f0fb7f40de060c049f5d358f93

--- a/rapidvg/platform/msvc2008/projects/rapidvg.vcproj
+++ b/rapidvg/platform/msvc2008/projects/rapidvg.vcproj
@@ -154,6 +154,10 @@
 			>
 		</File>
 		<File
+			RelativePath="..\..\..\src\rapidvg\rvg.h"
+			>
+		</File>
+		<File
 			RelativePath="..\..\..\src\rapidvg\rvg_math.h"
 			>
 		</File>
