--- a/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
+++ b/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
@@ -657,6 +657,10 @@
 					>
 				</File>
 				<File
+					RelativePath="..\..\..\src\drag2d\dataset\ColorTrans.h"
+					>
+				</File>
+				<File
 					RelativePath="..\..\..\src\drag2d\dataset\Font.cpp"
 					>
 				</File>
