[ADDED] some aop
Former-commit-id: e160a1f120136d9648c25b953a99b80cfde47f55

--- a/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
+++ b/drag2d/platform/msvc2008/projects/libdrag2d.vcproj
@@ -561,6 +561,42 @@
 					>
 				</File>
 			</Filter>
+			<Filter
+				Name="property"
+				>
+				<File
+					RelativePath="..\..\..\src\drag2d\history\SetSpriteAngleAOP.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\drag2d\history\SetSpriteAngleAOP.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\drag2d\history\SetSpriteColorAOP.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\drag2d\history\SetSpriteColorAOP.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\drag2d\history\SetSpritePosAOP.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\drag2d\history\SetSpritePosAOP.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\drag2d\history\SetSpriteTwoAOP.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\..\src\drag2d\history\SetSpriteTwoAOP.h"
+					>
+				</File>
+			</Filter>
 		</Filter>
 		<Filter
 			Name="edit_component"
