[CHANGED] ps注册回调的位置
Former-commit-id: 83a7ad91a6602ef8906e07164dd63f17aa23afc7

--- a/easyparticle3d/platform/msvc2008/projects/libparticle3d.vcproj
+++ b/easyparticle3d/platform/msvc2008/projects/libparticle3d.vcproj
@@ -154,6 +154,14 @@
 			Name="dataset"
 			>
 			<File
+				RelativePath="..\..\..\src\libparticle3d\PS.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libparticle3d\PS.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\src\libparticle3d\Sprite.cpp"
 				>
 			</File>
