--- a/easyparticle2d/platform/msvc2008/projects/libparticle2d.vcproj
+++ b/easyparticle2d/platform/msvc2008/projects/libparticle2d.vcproj
@@ -153,6 +153,14 @@
 			Name="dataset"
 			>
 			<File
+				RelativePath="..\..\..\src\libparticle2d\PS.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\src\libparticle2d\PS.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\..\src\libparticle2d\Sprite.cpp"
 				>
 			</File>
